# bedrock-agentcore-migrations

./: .gitignore  README.md
agentcore/: agentcore.json  aws-targets.json
agentcore/.cli/: deployed-state.json
agentcore/cdk/: package-lock.json
app/ippon_assistant/: agent.py  build_lambda.sh  main.py  pyproject.toml  requirements_lambda.txt  web_app.py  web_app_lambda.py  web_app_lambda_old.py
app/ippon_assistant/mcp_client/: client.py
app/ippon_assistant/model/: load.py
app/ippon_assistant/static/: index.html
docs/: architecture.py
infra/cdk/: package-lock.json  package.json
infra/cdk/lib/: stack.ts
lambda/pricing/: deploy.sh  gateway_target.json  lambda_function.py
